all done! site is complete

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <script src="site_libs/header-attrs-2.29/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<link href="site_libs/bootstrap-3.3.5/css/cerulean.min.css" rel="stylesheet" />
+<link href="site_libs/bootstrap-3.3.5/css/flatly.min.css" rel="stylesheet" />
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/html5shiv.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/respond.min.js"></script>
@@ -361,8 +361,8 @@ src="https://media.giphy.com/media/drXGoW1iudhKw/giphy.gif" /></p>
 <h2>Here’s a subsection</h2>
 <p>and some additional text..</p>
 <pre class="r"><code>rnorm(10)</code></pre>
-<pre><code>##  [1] -1.8100474 -0.2519777  0.6083248  1.2267031  0.1509016  1.2817497
-##  [7]  0.5056946  1.1070252  0.5358819  1.4280729</code></pre>
+<pre><code>##  [1]  0.95632070  1.75380752 -1.80130244  0.59222019  0.04661410 -0.77852965
+##  [7] -0.43862424  0.09168117  0.86159380 -0.29591484</code></pre>
 </div>
 <div id="links-to-other-websites" class="section level2">
 <h2>Links to other websites</h2>
@@ -375,6 +375,8 @@ src="https://media.giphy.com/media/drXGoW1iudhKw/giphy.gif" /></p>
 <div id="local-image" class="section level2">
 <h2>Local image</h2>
 <p>here is a sunset</p>
+<p>“<img src = "images/IMG_9217.jpg" style="width:75%">” : how to code
+images in html so u can make edits easier.</p>
 <p><img src="images/IMG_9217.jpg" /></p>
 </div>
 <div id="link-to-page-within-the-sight" class="section level2">
