--- a/index.html
+++ b/index.html
@@ -327,6 +327,9 @@ div.tocify {
   <a href="about.html">About</a>
 </li>
 <li>
+  <a href="plotly.html">Plotly</a>
+</li>
+<li>
   <a href="mailto:&lt;yasminevang@icloud.com&gt;">
     <span class="fa fa-envelope fa-lg"></span>
      
@@ -361,8 +364,8 @@ src="https://media.giphy.com/media/drXGoW1iudhKw/giphy.gif" /></p>
 <h2>Here’s a subsection</h2>
 <p>and some additional text..</p>
 <pre class="r"><code>rnorm(10)</code></pre>
-<pre><code>##  [1]  0.95632070  1.75380752 -1.80130244  0.59222019  0.04661410 -0.77852965
-##  [7] -0.43862424  0.09168117  0.86159380 -0.29591484</code></pre>
+<pre><code>##  [1]  0.7264326  0.5637037  0.3616594 -0.8036742 -0.2426160 -0.5323855
+##  [7]  0.9549364 -1.0549898  0.4334058  1.9084950</code></pre>
 </div>
 <div id="links-to-other-websites" class="section level2">
 <h2>Links to other websites</h2>
