--- a/about.html
+++ b/about.html
@@ -327,6 +327,9 @@ div.tocify {
   <a href="about.html">About</a>
 </li>
 <li>
+  <a href="plotly.html">Plotly</a>
+</li>
+<li>
   <a href="mailto:&lt;yasminevang@icloud.com&gt;">
     <span class="fa fa-envelope fa-lg"></span>
      
