plotlyyyyy and dashboardds

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <script src="site_libs/header-attrs-2.29/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<link href="site_libs/bootstrap-3.3.5/css/flatly.min.css" rel="stylesheet" />
+<link href="site_libs/bootstrap-3.3.5/css/cerulean.min.css" rel="stylesheet" />
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/html5shiv.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/respond.min.js"></script>
@@ -330,6 +330,9 @@ div.tocify {
   <a href="plotly.html">Plotly</a>
 </li>
 <li>
+  <a href="dashboardd.html">Dashboard</a>
+</li>
+<li>
   <a href="mailto:&lt;yasminevang@icloud.com&gt;">
     <span class="fa fa-envelope fa-lg"></span>
      
@@ -364,8 +367,8 @@ src="https://media.giphy.com/media/drXGoW1iudhKw/giphy.gif" /></p>
 <h2>Here’s a subsection</h2>
 <p>and some additional text..</p>
 <pre class="r"><code>rnorm(10)</code></pre>
-<pre><code>##  [1]  0.7264326  0.5637037  0.3616594 -0.8036742 -0.2426160 -0.5323855
-##  [7]  0.9549364 -1.0549898  0.4334058  1.9084950</code></pre>
+<pre><code>##  [1] -0.2119224  0.1262348  1.4322500 -0.6091751 -0.9577733  0.5324745
+##  [7]  0.6899275  0.9503970  1.0081965  0.5123686</code></pre>
 </div>
 <div id="links-to-other-websites" class="section level2">
 <h2>Links to other websites</h2>
